# src/main/java/me/josecomparotto/contabilidade_pessoal/controller/api/ContasApiController.java
@@ -9,6 +9,7 @@ import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -46,6 +47,19 @@ public class ContasApiController {
     public ResponseEntity<?> criarConta(@RequestBody ContaNewDto contaDto) {
         ContaFlatDto novaConta = contasService.criarConta(contaDto);
         return ResponseEntity.status(HttpStatus.CREATED).body(novaConta);
+    }
+
+    // PUT /api/contas/{id}
+    @PutMapping("/{id}")
+    public ResponseEntity<?> atualizarConta(@PathVariable Integer id, @RequestBody ContaFlatDto contaDto) {
+        try {
+            ContaFlatDto contaAtualizada = contasService.atualizarConta(id, contaDto);
+            if (contaAtualizada == null)
+                return ResponseEntity.notFound().build();
+            return ResponseEntity.ok(contaAtualizada);
+        } catch (IllegalStateException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
     }
 
     // DELETE /api/contas/{id}
